--- a/css/main.css
+++ b/css/main.css
@@ -17,24 +17,24 @@
 
 .mrn-ribbon.mrn-pos-top-left {
   background-image: url(../image/ribbon-top-left.svg);
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
 }
 
 .mrn-ribbon.mrn-pos-top-right {
   background-image: url(../image/ribbon-top-right.svg);
-  top: 0px;
-  right: 0px;
+  top: 0;
+  right: 0;
 }
 
 .mrn-ribbon.mrn-pos-bottom-left {
   background-image: url(../image/ribbon-bottom-left.svg);
-  bottom: 0px;
-  left: 0px;
+  bottom: 0;
+  left: 0;
 }
 
 .mrn-ribbon.mrn-pos-bottom-right {
   background-image: url(../image/ribbon-bottom-right.svg);
-  bottom: 0px;
-  right: 0px;
+  bottom: 0;
+  right: 0;
 }
